Store headlines with geolocation in Parquet file

--- a/Adding Latitude and Longitude Coordinates.ipynb
+++ b/Adding Latitude and Longitude Coordinates.ipynb
@@ -73,8 +73,8 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>top</th>\n",
-       "      <td>Zika arrives in San Onofre</td>\n",
-       "      <td>Miami</td>\n",
+       "      <td>The Spread of West Nile Virus in Fairfield has...</td>\n",
+       "      <td>Monroe</td>\n",
        "      <td>Malaysia</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -88,11 +88,11 @@
        "</div>"
       ],
       "text/plain": [
-       "                          headline   city   country\n",
-       "count                          608    608        15\n",
-       "unique                         608    576        10\n",
-       "top     Zika arrives in San Onofre  Miami  Malaysia\n",
-       "freq                             1      4         3"
+       "                                                 headline    city   country\n",
+       "count                                                 608     608        15\n",
+       "unique                                                608     576        10\n",
+       "top     The Spread of West Nile Virus in Fairfield has...  Monroe  Malaysia\n",
+       "freq                                                    1       4         3"
       ]
      },
      "execution_count": 2,
@@ -7122,9 +7122,31 @@
    "source": [
     "pd.set_option(\"display.max_rows\", 1000)\n",
     "pd.set_option(\"display.max_colwidth\", 200)\n",
-    "headlines_with_geo = pd.merge(parsed_headlines, all_unique_cities, on=\"city_lower\", how=\"inner\")\n",
+    "headlines_with_geo = pd.merge(\n",
+    "    parsed_headlines, all_unique_cities, on=\"city_lower\", how=\"inner\"\n",
+    ")\n",
     "headlines_with_geo.drop(\"city_lower\", axis=1, inplace=True, errors=\"ignore\")\n",
     "headlines_with_geo"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Store results\n",
+    "\n",
+    "Serialize the resulting DataFrame in parquet format."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "headlines_with_geo.to_parquet(\n",
+    "    Path(\"data/processed/headlines-with-geo.parquet\"), index=False\n",
+    ")"
    ]
   }
  ],
